Punk Rock thing

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <center>  Punk Rock!!! </center>
         
     </h1>
+        <h2> This site shows the best roller coaster in the world. It is called the dragon roller coaster and it is involved in a punk rock theme environment.</h2>
     <img src="https://static.flysound.ro/img/p/1/4/4/0/2/0/144020-superlarge_default.jpg" alt="Electric Guitar" class="Guitar">
     <img src="https://img.freepik.com/premium-photo/dragon-shaped-roller-coaster-whizzing-through-park_1170794-309019.jpg" alt="Dragon Roller Coaster" class="DragonLeft">
+
+    <img src="https://wisdomrides.com/images/site/ridesales/CF7DDC58-E3B1-4792-901C-83265A209FE3.43789.5929398148-MT.jpg" alt = "Dragon Roller Coaster Right" class="DragonRight"
 </html>
