--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
-        <title>Punk RTock Styled with Dragons on Roller Coasters</title>
+        <title>Punk Rock Styled with Dragons on Roller Coasters</title>
         <link href="style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
@@ -16,9 +16,14 @@
         <center>  Punk Rock!!! </center>
         
     </h1>
-        <h2> This site shows the best roller coaster in the world. It is called the dragon roller coaster and it is involved in a punk rock theme environment.</h2>
-    <img src="https://static.flysound.ro/img/p/1/4/4/0/2/0/144020-superlarge_default.jpg" alt="Electric Guitar" class="Guitar">
+        <h2> This site shows the best roller coaster in the world. It is called the dragon roller coaster 
+            and it is involved in a punk rock theme environment. My idea was to add a punk punk background and images that represent grunge.
+             Then, I add my second image that represents dragons and a roller coaster.</h2>
+             
+            <h3 class="position"> Totally not AI Dragon Roller Coaster </h3>
+    <img src="Guitar.jpg" alt= "Electric Guitar" class="Guitar">
     <img src="https://img.freepik.com/premium-photo/dragon-shaped-roller-coaster-whizzing-through-park_1170794-309019.jpg" alt="Dragon Roller Coaster" class="DragonRight">
 
-    <img src="https://wisdomrides.com/images/site/ridesales/CF7DDC58-E3B1-4792-901C-83265A209FE3.43789.5929398148-MT.jpg" alt = "Dragon Roller Coaster Right" class="DragonLeft"
-</html>
+    <img src="https://wisdomrides.com/images/site/ridesales/CF7DDC58-E3B1-4792-901C-83265A209FE3.43789.5929398148-MT.jpg" 
+    alt = "Dragon Roller Coaster Right" class="DragonLeft"
+</html
